@startuml ER Diagramm

' hide the spot
hide circle

' Probleme mit Krähenfüßen vermeiden
skinparam linetype ortho

entity "Auto" {
  * id: integer <<generated>>
  --
  * version: integer
  * fahrgestellnummer: varchar
  * marke: varchar
  * modell: varchar
  * baujahr: integer
  * art: varchar
  * preis: decimal(8,2)
    sicherheitsmerkmale: text[]
  * erzeugt: timestamp
  * aktualisiert: timestamp
}

entity "Motor" {
  * id: integer <<generated>>
  --
  * name: text
  * ps: integer
  * zylinder: integer
  * drehzahl: decimal(4,3)
  * **auto_id**: integer <<FK>>
}

entity "Reperatur" {
  * id: integer <<generated>>
  --
  * kosten: decimal(4,3)
  * mechaniker: text
  * datum: date
  * **auto_id**: integer <<FK>>
}

Auto ||--|| Motor : besitzt >
Auto ||--o{ Reperatur : hat >

@enduml
